Clean up ten million checkboxes example