@@ -15,7 +15,10 @@
   (b/compile-clj {:basis      @basis
                   :ns-compile '[app.main]
                   :src-dirs   ["src"]
-                  :class-dir  class-dir})
+                  :class-dir  class-dir
+                  :java-opts ;; needed for datalevin
+                  ["--add-opens=java.base/java.nio=ALL-UNNAMED"
+                   "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED"]})
   (b/uber {:class-dir class-dir
            :uber-file uber-file
            :basis     @basis
